--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         </div>
 
         <button class="generate-btn" onclick="generateFiveGames()">5게임 추천받기</button>
+
+        <div class="contact-form">
+            <h3>🤝 제휴 문의</h3>
+            <form action="https://formspree.io/f/mzdavzjb" method="POST">
+                <input type="email" name="email" placeholder="이메일 주소" required>
+                <textarea name="message" placeholder="문의 내용을 입력해 주세요." required></textarea>
+                <button type="submit">문의하기</button>
+            </form>
+        </div>
     </div>
 
     <script src="main.js"></script>
