--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="google-adsense-account" content="ca-pub-6109982424401189">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6109982424401189"
      crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K0KN3B8TMM"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-K0KN3B8TMM');
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
